# rsocket-cpp

./: .gitignore  CMakeLists.txt  README.md  python.sh
cmake/: cxx17.cmake
rsocket/: ColdResumeHandler.h  ConnectionAcceptor.h  ConnectionFactory.h  DuplexConnection.h  Payload.h  RSocket.h  RSocketClient.h  RSocketConnectionEvents.h  RSocketErrors.h  RSocketException.h  RSocketParameters.h  RSocketRequester.h  RSocketResponder.h  RSocketServer.h  RSocketServerState.h  RSocketServiceHandler.h  RSocketStats.h  ResumeManager.h
rsocket/benchmarks/: Fixture.h  Latch.h  Throughput.h
rsocket/examples/conditional-request-handling/: JsonRequestHandler.h  TextRequestHandler.h
rsocket/examples/util/: ExampleSubscriber.h
rsocket/framing/: ErrorCode.h  Frame.h  FrameFlags.h  FrameHeader.h  FrameProcessor.h  FrameSerializer.h  FrameSerializer_v1_0.h  FrameTransport.h  FrameTransportImpl.h  FrameType.h  FramedDuplexConnection.h  FramedReader.h  Framer.h  ProtocolVersion.h  ResumeIdentificationToken.h  ScheduledFrameProcessor.h  ScheduledFrameTransport.h
rsocket/internal/: Allowance.h  ClientResumeStatusCallback.h  Common.h  ConnectionSet.h  KeepaliveTimer.h  ScheduledRSocketResponder.h  ScheduledSingleObserver.h  ScheduledSingleSubscription.h  ScheduledSubscriber.h  ScheduledSubscription.h  SetupResumeAcceptor.h  StackTraceUtils.h  SwappableEventBase.h  WarmResumeManager.h
rsocket/statemachine/: ChannelRequester.h  ChannelResponder.h  ConsumerBase.h  FireAndForgetResponder.h  PublisherBase.h  RSocketStateMachine.h  RequestResponseRequester.h  RequestResponseResponder.h  StreamFragmentAccumulator.h  StreamRequester.h  StreamResponder.h  StreamStateMachineBase.h  StreamsWriter.h
rsocket/tck-test/: BaseSubscriber.h  FlowableSubscriber.h  MarbleProcessor.h  SingleSubscriber.h  TestFileParser.h  TestInterpreter.h  TestSuite.h  TypedCommands.h
rsocket/test/: RSocketTests.h
rsocket/test/handlers/: HelloServiceHandler.h  HelloStreamRequestHandler.h
rsocket/test/test_utils/: ColdResumeManager.h  GenericRequestResponseHandler.h  MockDuplexConnection.h  MockFrameProcessor.h  MockStats.h  MockStreamsWriter.h  PrintSubscriber.h  StatsPrinter.h
rsocket/test/transport/: DuplexConnectionTest.h
rsocket/transports/: RSocketTransport.h
rsocket/transports/tcp/: TcpConnectionAcceptor.h  TcpConnectionFactory.h  TcpDuplexConnection.h
